--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Jordan Caudill",
   "license": "Apache-2.0",
   "dependencies": {
+    "angular": "^1.5.8",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "mongodb": "^2.2.11"
