--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "angular": "^1.5.8",
+    "async": "^2.1.4",
     "express": "^4.14.0",
-    "gulp": "^3.9.1",
-    "mongodb": "^2.2.11"
+    "mongodb": "^2.2.11",
+    "mongoose": "^4.7.0"
   },
   "devDependencies": {
     "jasmine": "^2.5.2"
