--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^4.7.0"
   },
   "devDependencies": {
-    "jasmine": "^2.5.2"
+    "chai": "^3.5.0",
+    "jasmine": "^2.5.2",
+    "mocha": "^3.2.0"
   }
 }
