--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.0"
-  },  
+  },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "jasmine": "^2.5.2",
     "mocha": "^3.2.0"
   },
