--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^4.7.0"
   },
   "devDependencies": {
+    "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "jasmine": "^2.5.2",
