--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
